Set index.html for GitHub Pages

--- a/accesorios.html
+++ b/accesorios.html
@@ -20,7 +20,7 @@
             <img src="img/logo/logo 1.svg" alt="CompuTronic Logo" class="nav-brand">  
             <ul class="nav-menu">
                 <li>
-                    <a href="inicio.html">Inicio
+                    <a href="index.html">Inicio
                     <i class="fa fa-home"></i></a>
                 </li>
                 <li>
